After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776580 - "A major upgrade…" is not translated
"A major upgrade…" is not translated
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-12-29 14:31 UTC by Rafal Luzynski
Modified: 2017-02-17 22:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Rafal Luzynski 2016-12-29 14:31:01 UTC
The second line of the banner offering a system upgrade, in my case from Fedora 24 to Fedora 25, the one which says:

   "A major upgrade, with new features and added polish."

is not translated, it's always displayed in English. I've checked several languages and it's the same in all of them. Having browsed quickly the source code (including *.po files) I can't see any problem like missing translation or the original English string reworded or not marked for translation. Magic?
Comment 1 Kalev Lember 2016-12-29 14:55:19 UTC
Thanks, fixed in master. I'll cherry pick this to 3.22 as well for next release.
Comment 2 Rafal Luzynski 2016-12-29 16:06:13 UTC
Thank you for the quick fix.

(In reply to Kalev Lember from comment #1)
> [...] I'll cherry pick this to 3.22 as well for next release.

Also 3.20, this is the most important ATM. 3.22 is in Fedora 25 which does not yet propose upgrade to F26, now F24 proposes upgrade to F25.
Comment 3 Kalev Lember 2017-01-16 19:17:22 UTC
Rafal: We updated gnome-software in F24 to 3.22 and don't plan on doing more 3.20 releases. As for this bug, https://bodhi.fedoraproject.org/updates/FEDORA-2017-0c22055bfa should fix this for F24 and https://bodhi.fedoraproject.org/updates/FEDORA-2017-b43f73858a for F25.
Comment 4 Rafal Luzynski 2017-02-17 22:53:14 UTC
Thank you, Kalev, and sorry for the late reply. I confirm it works correctly in F24 in several languages and probably also in F25 but F24 is the only Fedora version featuring g-s 3.22 and offering a major upgrade.