fedora-distro-upgrades: Mark a string for translation

This cherry-picks two commits from master:

(cherry picked from commit bcc88f74cc527a9e99c3c000614c8db45329a0ba)
(cherry picked from commit 081bc0a4e2c546ef8bfca1383d7ab36756752583)

https://bugzilla.gnome.org/show_bug.cgi?id=776580